# x402-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
components/x402_protocol/: CMakeLists.txt
components/x402_protocol/include/: config_manager.h  crypto_utils.h  display_manager.h  http_client.h  solana_client.h  wifi_manager.h  x402_client.h
components/x402_protocol/src/: config_manager.cpp  crypto_utils.cpp  display_manager.cpp  http_client.cpp  solana_client.cpp  wifi_manager.cpp  x402_client.cpp
main/: CMakeLists.txt  app_main.cpp  base58.c  base58.h  base64.c  base64.h  idf_component.yml  main.cpp  solkunk.c
main/spiffs/: config.json
